overflow on headers fixed

--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -245,7 +245,7 @@
         font-family: "playfair display", Arial, sans-serif;
         font-size: 90%;
       
-        overflow-x: hidden;
+        // overflow-x: hidden;
         margin: 0;
         color: var(--headerColor);
     }
